...
                          contentDescription = "Logo")
                    }
                OutlinedTextField(
                    value = state.name,
                    onValueChange = { viewmodel.setName(it) },
                    label = { Text("Association Name") },
                    modifier = Modifier.fillMaxWidth().testTag("name"))
              }

          LazyColumn(
              modifier = Modifier.fillMaxWidth().weight(1f).testTag("MemberList"),
              verticalArrangement = Arrangement.spacedBy(0.dp, Alignment.Top),
              horizontalAlignment = Alignment.CenterHorizontally) {
...

          Column(
              horizontalAlignment = Alignment.CenterHorizontally,
              modifier = Modifier.fillMaxWidth()) {
                OutlinedButton(
                    onClick = { viewmodel.addMember() },
                    modifier = Modifier.fillMaxWidth().testTag("addMember")) {
                      Icon(Icons.Default.Add, contentDescription = "Add members")
                      Text("Add members")
                    }
                Button(
                    onClick = {
                      viewmodel.saveAsso()
                      navigationActions.navigateTo(Destination.Home)
                    },
                    modifier = Modifier.fillMaxWidth().testTag("create"),
                    enabled = viewmodel.canSaveAsso()) {
                      Text("Create")
                    }
              }
        }

...
            ElevatedCard {
              // temporary UI to see if dialog opens
              Column(
                  modifier = Modifier.padding(16.dp).fillMaxWidth(),
                  horizontalAlignment = Alignment.CenterHorizontally) {
                    UserSearchTextField(
                        modifier = Modifier.testTag("memberSearchField").fillMaxWidth(),
                        searchValue = state.searchMember,
                        userList = state.searchMemberList,
                        user = state.editMember,
                        onUserSearch = { viewmodel.searchMember(it) },
                        onUserSelect = { viewmodel.selectMember(it) },
                        onUserDismiss = { viewmodel.dismissMemberSearch() },
...

                            OutlinedButton(
                                onClick = { viewmodel.addMemberToList() },
                                modifier =
                                    Modifier.wrapContentSize()
                                        .weight(1f)
                                        .testTag("addMemberButton")) {
                                  Text(text = "Save", textAlign = TextAlign.Center)
                                }
                          }
                    }
                  }
            }
...
