...

  val treasuryState by treasuryViewModel.uiState.collectAsState()
  val receiptState by receiptListViewModel.uiState.collectAsState()
  val pagerState = rememberPagerState(pageCount = { TreasuryPageIndex.entries.size })

  Scaffold(
      modifier = Modifier.testTag("treasuryScreen"),
      topBar = {
        MainTopBar(
            title = "Treasury",
            optInSearchBar = true,
            query = treasuryState.searchQuery,
            onQueryChange = { treasuryViewModel.setSearchQuery(it) },
...
